--- a/contact-form-bg.html
+++ b/contact-form-bg.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section class="contact">
-      <a href="main.html">X</a>
+      <a href="main-bg.html">X</a>
       <h2>Сържете се</h2>
 
       <form
