--- a/main-bg.html
+++ b/main-bg.html
@@ -45,8 +45,8 @@
           target="_blank"
           ><i class="bx bxl-instagram"></i
         ></a>
-        <a href="#"><i class="bx bxl-gmail"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="contact-form-bg.html"><i class="bx bxl-gmail"></i></a>
+        <a href="https://github.com/Muro4/"><i class="bx bxl-github"></i></a>
       </div>
 
       <img src="imgs/tutel.png" class="tutel" />
