--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
           ><i class="bx bxl-instagram"></i
         ></a>
         <a href="contact-form.html"><i class="bx bxl-gmail"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/Muro4/"><i class="bx bxl-github"></i></a>
       </div>
 
       <img src="imgs/tutel.png" class="tutel" />
